--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
     
     <header></header>
     <main>
+
+        <section class="banner">
+            <img src="assets/img/gato.banner.png" alt="gato banner">
+            <p class="texto-foco">TEXTO GATO</p>
+            <p class="texto-secundario">Adote sete vidas gato</p>
+        </section>
+
+        <section class="banner2">
+            <img src="assets/img/gato.banner.png" alt="gato banner">
+            <p class="texto-foco2">TEXTO GATO</p>
+            <p class="texto-secundario2">Adote sete vidas gato</p>
+        </section>
+
         <section class="container"id="card-container">
             
             <div class="card">
                     <h3>CHRIS</h3>
-                    <img src="assets/img/gatinZzz.webp" alt="">
+                    <img src="assets/img/gatinZzz.webp" alt="Gatin">
                     <button> Adote o Chris</button>
             </div>
             <div class="card">
